// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldComponent image can be moved using mouse 1`] = `
<div
  class="editor"
  data-testid="editor"
  style="width: 100px; height: 100px; background: rgb(238, 238, 238);"
>
  <div
    style="width: 80px; height: 80px; left: 10px; top: 10px; position: absolute; background: rgb(255, 255, 255);"
  >
    <div
      data-testid="field-1"
      style="position: absolute; top: 10px; left: 10px; width: 60px; height: 60px; transform: rotate(0rad);"
    >
      <img
        alt=""
        src="/test.png"
        style="width: 60px; height: 60px; position: absolute; left: 0px; top: 0px; transform: scaleX(1) rotate(0deg) translate(0px, 0px);"
      />
    </div>
  </div>
</div>
`;

exports[`FieldComponent image can be moved using mouse 2`] = `
<div
  class="editor"
  data-testid="editor"
  style="width: 100px; height: 100px; background: rgb(238, 238, 238);"
>
  <div
    style="width: 80px; height: 80px; left: 10px; top: 10px; position: absolute; background: rgb(255, 255, 255);"
  >
    <div
      data-testid="field-1"
      style="position: absolute; top: 20px; left: 20px; width: 60px; height: 60px; transform: rotate(0rad);"
    >
      <img
        alt=""
        src="/test.png"
        style="width: 60px; height: 60px; position: absolute; left: 0px; top: 0px; transform: scaleX(1) rotate(0deg) translate(0px, 0px);"
      />
    </div>
  </div>
</div>
`;

exports[`FieldComponent image can be moved using touch 1`] = `
<div
  class="editor"
  data-testid="editor"
  style="width: 100px; height: 100px; background: rgb(238, 238, 238);"
>
  <div
    style="width: 80px; height: 80px; left: 10px; top: 10px; position: absolute; background: rgb(255, 255, 255);"
  >
    <div
      data-testid="field-1"
      style="position: absolute; top: 10px; left: 10px; width: 60px; height: 60px; transform: rotate(0rad);"
    >
      <img
        alt=""
        src="/test.png"
        style="width: 60px; height: 60px; position: absolute; left: 0px; top: 0px; transform: scaleX(1) rotate(0deg) translate(0px, 0px);"
      />
    </div>
  </div>
</div>
`;

exports[`FieldComponent image can be moved using touch 2`] = `
<div
  class="editor"
  data-testid="editor"
  style="width: 100px; height: 100px; background: rgb(238, 238, 238);"
>
  <div
    style="width: 80px; height: 80px; left: 10px; top: 10px; position: absolute; background: rgb(255, 255, 255);"
  >
    <div
      data-testid="field-1"
      style="position: absolute; top: 22px; left: 21px; width: 60px; height: 60px; transform: rotate(0rad);"
    >
      <img
        alt=""
        src="/test.png"
        style="width: 60px; height: 60px; position: absolute; left: 0px; top: 0px; transform: scaleX(1) rotate(0deg) translate(0px, 0px);"
      />
    </div>
  </div>
</div>
`;
